WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271813
[visionOS] Unable to set playback speed back to 1x after changing it to a different speed
https://bugs.webkit.org/show_bug.cgi?id=271813
Summary
[visionOS] Unable to set playback speed back to 1x after changing it to a dif...
Andy Estes
Reported
2024-03-27 18:28:28 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-27 18:29:20 PDT
<
rdar://problem/125522760
>
Andy Estes
Comment 2
2024-03-27 18:33:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26545
EWS
Comment 3
2024-03-28 13:02:18 PDT
Committed
276795@main
(c891276841b8): <
https://commits.webkit.org/276795@main
> Reviewed commits have been landed. Closing PR #26545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug